tests/int/snapshots/r#mod__int__use_command__flag_h.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "-h"
---
success: true
exit_code: 0
----- stdout -----
Analyze a module and list its internal crate `use` statements

Usage: crawk use [OPTIONS] <MODULE_PATH>

Arguments:
  <MODULE_PATH>  Module path relative to the crate root (e.g., "utils" or "foo::bar::baz")

Options:
  -t, --include-tests  Include modules defined in `#[cfg(test)]` blocks (excluded by default)
  -p, --path <PATH>    Path to the crate root directory (defaults to current directory)
  -v, --verbose        Show verbose output including crate root, module path, and analysis info
  -e, --expand         Expand grouped imports into individual paths
  -d, --depth <DEPTH>  Limit displayed module path depth from the crate root
  -h, --help           Print help (see more with '--help')

----- stderr -----
