tests/int/snapshots/r#mod__int__use_command__module_analysis::collect_flags_t.snap
---
source: tests/int/use_command.rs
info:
  program: crawk
  args:
    - use
    - "analysis::collect"
    - "-t"
---
success: true
exit_code: 0
----- stdout -----
crate::analysis::visit::UseVisitor
crate::module::expand::is_test_module
crate::module::locate::{find_submodule, get_src_dir}

----- stderr -----
